rr/rr_tab.output
Terminals unused in grammar

   IN


State 176 conflicts: 1 shift/reduce


Grammar

    0 $accept: pgm $end

    1 pgm: %empty
    2    | pgm d

    3 d: FUN ID '(' ae ')' ':' t '{' ss '}'
    4  | FUN ID '(' ae ')' ':' t ';'
    5  | VAR ID '=' e ';'
    6  | VAR ID ':' t ';'
    7  | VAR ID ':' t '=' e ';'
    8  | ENUM ID '{' de '}'
    9  | CLASS ID '{' dd '}'

   10 dd: %empty
   11   | dd d

   12 de: ID
   13   | de ',' ID

   14 ae: %empty
   15   | a

   16 a: av
   17  | a ',' av

   18 av: ID '=' e
   19   | ID ':' t
   20   | ID ':' t '=' e

   21 s: VAR ID '=' e ';'
   22  | VAR ID ':' t ';'
   23  | VAR ID ':' t '=' e ';'
   24  | e ';'
   25  | IF '(' ev ')' s
   26  | IF '(' ev ')' s ELSE s
   27  | FOR '(' ev ';' e ';' e ')' s
   28  | WHILE '(' ev ')' s
   29  | '{' ss '}'
   30  | ';'

   31 ss: %empty
   32   | ss s

   33 ev: e
   34   | VAR ID ':' t '=' e
   35   | VAR ID '=' e

   36 e: NUM
   37  | ID
   38  | STR
   39  | e '=' e
   40  | e '+' e
   41  | e '-' e
   42  | e '*' e
   43  | e '/' e
   44  | e '%' e
   45  | e '<' e
   46  | e "<=" e
   47  | e '>' e
   48  | e ">=" e
   49  | e "!=" e
   50  | e "==" e
   51  | e "<<" e
   52  | e ">>" e
   53  | e "&&" e
   54  | e "||" e
   55  | CAST '(' t ',' e ')'
   56  | '(' e ')'
   57  | "++" e
   58  | "--" e
   59  | e "++"
   60  | e "--"
   61  | e '.' e
   62  | e '[' ee ']'
   63  | e '(' eee ')'
   64  | '+' e
   65  | '-' e
   66  | '!' e
   67  | e '|' e
   68  | e '&' e
   69  | e '^' e
   70  | '&' e
   71  | '~' e
   72  | NEW t '(' eee ')'
   73  | NEW t '[' ee ']'

   74 eee: %empty
   75    | ee

   76 ee: e
   77   | ee ',' e

   78 ni: ID
   79   | ni '.' ID

   80 t: ni
   81  | t '[' ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 66
'%' (37) 44
'&' (38) 68 70
'(' (40) 3 4 25 26 27 28 55 56 63 72
')' (41) 3 4 25 26 27 28 55 56 63 72
'*' (42) 42
'+' (43) 40 64
',' (44) 13 17 55 77
'-' (45) 41 65
'.' (46) 61 79
'/' (47) 43
':' (58) 3 4 6 7 19 20 22 23 34
';' (59) 4 5 6 7 21 22 23 24 27 30
'<' (60) 45
'=' (61) 5 7 18 20 21 23 34 35 39
'>' (62) 47
'[' (91) 62 73 81
']' (93) 62 73 81
'^' (94) 69
'{' (123) 3 8 9 29
'|' (124) 67
'}' (125) 3 8 9 29
'~' (126) 71
error (256)
VAR (258) 5 6 7 21 22 23 34 35
FUN (259) 3 4
ENUM (260) 8
CLASS (261) 9
IF (262) 25 26
ELSE (263) 26
WHILE (264) 28
FOR (265) 27
IN (266)
CAST (267) 55
NEW (268) 72 73
NUM (269) 36
ID (270) 3 4 5 6 7 8 9 12 13 18 19 20 21 22 23 34 35 37 78 79
STR (271) 38
"++" (272) 57 59
"--" (273) 58 60
"<<" (274) 51
">>" (275) 52
"==" (276) 50
"!=" (277) 49
">=" (278) 48
"<=" (279) 46
"&&" (280) 53
"||" (281) 54
PRE (282)
UMINUS (283)
POST (284)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
pgm (54)
    on left: 1 2, on right: 0 2
d (55)
    on left: 3 4 5 6 7 8 9, on right: 2 11
dd (56)
    on left: 10 11, on right: 9 11
de (57)
    on left: 12 13, on right: 8 13
ae (58)
    on left: 14 15, on right: 3 4
a (59)
    on left: 16 17, on right: 15 17
av (60)
    on left: 18 19 20, on right: 16 17
s (61)
    on left: 21 22 23 24 25 26 27 28 29 30, on right: 25 26 27 28 32
ss (62)
    on left: 31 32, on right: 3 29 32
ev (63)
    on left: 33 34 35, on right: 25 26 27 28
e (64)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73, on right:
    5 7 18 20 21 23 24 27 33 34 35 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 76 77
eee (65)
    on left: 74 75, on right: 63 72
ee (66)
    on left: 76 77, on right: 62 73 75 77
ni (67)
    on left: 78 79, on right: 79 80
t (68)
    on left: 80 81, on right: 3 4 6 7 19 20 22 23 34 55 72 73 81


State 0

    0 $accept: . pgm $end

    $default  reduce using rule 1 (pgm)

    pgm  go to state 1


State 1

    0 $accept: pgm . $end
    2 pgm: pgm . d

    $end   shift, and go to state 2
    VAR    shift, and go to state 3
    FUN    shift, and go to state 4
    ENUM   shift, and go to state 5
    CLASS  shift, and go to state 6

    d  go to state 7


State 2

    0 $accept: pgm $end .

    $default  accept


State 3

    5 d: VAR . ID '=' e ';'
    6  | VAR . ID ':' t ';'
    7  | VAR . ID ':' t '=' e ';'

    ID  shift, and go to state 8


State 4

    3 d: FUN . ID '(' ae ')' ':' t '{' ss '}'
    4  | FUN . ID '(' ae ')' ':' t ';'

    ID  shift, and go to state 9


State 5

    8 d: ENUM . ID '{' de '}'

    ID  shift, and go to state 10


State 6

    9 d: CLASS . ID '{' dd '}'

    ID  shift, and go to state 11


State 7

    2 pgm: pgm d .

    $default  reduce using rule 2 (pgm)


State 8

    5 d: VAR ID . '=' e ';'
    6  | VAR ID . ':' t ';'
    7  | VAR ID . ':' t '=' e ';'

    '='  shift, and go to state 12
    ':'  shift, and go to state 13


State 9

    3 d: FUN ID . '(' ae ')' ':' t '{' ss '}'
    4  | FUN ID . '(' ae ')' ':' t ';'

    '('  shift, and go to state 14


State 10

    8 d: ENUM ID . '{' de '}'

    '{'  shift, and go to state 15


State 11

    9 d: CLASS ID . '{' dd '}'

    '{'  shift, and go to state 16


State 12

    5 d: VAR ID '=' . e ';'

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 30


State 13

    6 d: VAR ID ':' . t ';'
    7  | VAR ID ':' . t '=' e ';'

    ID  shift, and go to state 31

    ni  go to state 32
    t   go to state 33


State 14

    3 d: FUN ID '(' . ae ')' ':' t '{' ss '}'
    4  | FUN ID '(' . ae ')' ':' t ';'

    ID  shift, and go to state 34

    $default  reduce using rule 14 (ae)

    ae  go to state 35
    a   go to state 36
    av  go to state 37


State 15

    8 d: ENUM ID '{' . de '}'

    ID  shift, and go to state 38

    de  go to state 39


State 16

    9 d: CLASS ID '{' . dd '}'

    $default  reduce using rule 10 (dd)

    dd  go to state 40


State 17

   55 e: CAST . '(' t ',' e ')'

    '('  shift, and go to state 41


State 18

   72 e: NEW . t '(' eee ')'
   73  | NEW . t '[' ee ']'

    ID  shift, and go to state 31

    ni  go to state 32
    t   go to state 42


State 19

   36 e: NUM .

    $default  reduce using rule 36 (e)


State 20

   37 e: ID .

    $default  reduce using rule 37 (e)


State 21

   38 e: STR .

    $default  reduce using rule 38 (e)


State 22

   57 e: "++" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 43


State 23

   58 e: "--" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 44


State 24

   70 e: '&' . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 45


State 25

   64 e: '+' . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 46


State 26

   65 e: '-' . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 47


State 27

   66 e: '!' . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 48


State 28

   71 e: '~' . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 49


State 29

   56 e: '(' . e ')'

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 50


State 30

    5 d: VAR ID '=' e . ';'
   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    "<<"  shift, and go to state 53
    ">>"  shift, and go to state 54
    "=="  shift, and go to state 55
    "!="  shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    "&&"  shift, and go to state 59
    "||"  shift, and go to state 60
    '='   shift, and go to state 61
    '|'   shift, and go to state 62
    '^'   shift, and go to state 63
    '&'   shift, and go to state 64
    '>'   shift, and go to state 65
    '<'   shift, and go to state 66
    '+'   shift, and go to state 67
    '-'   shift, and go to state 68
    '*'   shift, and go to state 69
    '/'   shift, and go to state 70
    '%'   shift, and go to state 71
    '.'   shift, and go to state 72
    '['   shift, and go to state 73
    '('   shift, and go to state 74
    ';'   shift, and go to state 75


State 31

   78 ni: ID .

    $default  reduce using rule 78 (ni)


State 32

   79 ni: ni . '.' ID
   80 t: ni .

    '.'  shift, and go to state 76

    $default  reduce using rule 80 (t)


State 33

    6 d: VAR ID ':' t . ';'
    7  | VAR ID ':' t . '=' e ';'
   81 t: t . '[' ']'

    '='  shift, and go to state 77
    '['  shift, and go to state 78
    ';'  shift, and go to state 79


State 34

   18 av: ID . '=' e
   19   | ID . ':' t
   20   | ID . ':' t '=' e

    '='  shift, and go to state 80
    ':'  shift, and go to state 81


State 35

    3 d: FUN ID '(' ae . ')' ':' t '{' ss '}'
    4  | FUN ID '(' ae . ')' ':' t ';'

    ')'  shift, and go to state 82


State 36

   15 ae: a .
   17 a: a . ',' av

    ','  shift, and go to state 83

    $default  reduce using rule 15 (ae)


State 37

   16 a: av .

    $default  reduce using rule 16 (a)


State 38

   12 de: ID .

    $default  reduce using rule 12 (de)


State 39

    8 d: ENUM ID '{' de . '}'
   13 de: de . ',' ID

    '}'  shift, and go to state 84
    ','  shift, and go to state 85


State 40

    9 d: CLASS ID '{' dd . '}'
   11 dd: dd . d

    VAR    shift, and go to state 3
    FUN    shift, and go to state 4
    ENUM   shift, and go to state 5
    CLASS  shift, and go to state 6
    '}'    shift, and go to state 86

    d  go to state 87


State 41

   55 e: CAST '(' . t ',' e ')'

    ID  shift, and go to state 31

    ni  go to state 32
    t   go to state 88


State 42

   72 e: NEW t . '(' eee ')'
   73  | NEW t . '[' ee ']'
   81 t: t . '[' ']'

    '['  shift, and go to state 89
    '('  shift, and go to state 90


State 43

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   57  | "++" e .
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    '.'  shift, and go to state 72
    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 57 (e)


State 44

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   58  | "--" e .
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    '.'  shift, and go to state 72
    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 58 (e)


State 45

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e
   70  | '&' e .

    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    "<<"  shift, and go to state 53
    ">>"  shift, and go to state 54
    "=="  shift, and go to state 55
    "!="  shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    '>'   shift, and go to state 65
    '<'   shift, and go to state 66
    '+'   shift, and go to state 67
    '-'   shift, and go to state 68
    '*'   shift, and go to state 69
    '/'   shift, and go to state 70
    '%'   shift, and go to state 71
    '.'   shift, and go to state 72
    '['   shift, and go to state 73
    '('   shift, and go to state 74

    $default  reduce using rule 70 (e)


State 46

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   64  | '+' e .
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    '.'  shift, and go to state 72
    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 64 (e)


State 47

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   65  | '-' e .
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    '.'  shift, and go to state 72
    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 65 (e)


State 48

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   66  | '!' e .
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    '.'  shift, and go to state 72
    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 66 (e)


State 49

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e
   71  | '~' e .

    '.'  shift, and go to state 72
    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 71 (e)


State 50

   39 e: e . '=' e
   40  | e . '+' e
   41  | e . '-' e
   42  | e . '*' e
   43  | e . '/' e
   44  | e . '%' e
   45  | e . '<' e
   46  | e . "<=" e
   47  | e . '>' e
   48  | e . ">=" e
   49  | e . "!=" e
   50  | e . "==" e
   51  | e . "<<" e
   52  | e . ">>" e
   53  | e . "&&" e
   54  | e . "||" e
   56  | '(' e . ')'
   59  | e . "++"
   60  | e . "--"
   61  | e . '.' e
   62  | e . '[' ee ']'
   63  | e . '(' eee ')'
   67  | e . '|' e
   68  | e . '&' e
   69  | e . '^' e

    "++"  shift, and go to state 51
    "--"  shift, and go to state 52
    "<<"  shift, and go to state 53
    ">>"  shift, and go to state 54
    "=="  shift, and go to state 55
    "!="  shift, and go to state 56
    ">="  shift, and go to state 57
    "<="  shift, and go to state 58
    "&&"  shift, and go to state 59
    "||"  shift, and go to state 60
    '='   shift, and go to state 61
    '|'   shift, and go to state 62
    '^'   shift, and go to state 63
    '&'   shift, and go to state 64
    '>'   shift, and go to state 65
    '<'   shift, and go to state 66
    '+'   shift, and go to state 67
    '-'   shift, and go to state 68
    '*'   shift, and go to state 69
    '/'   shift, and go to state 70
    '%'   shift, and go to state 71
    '.'   shift, and go to state 72
    '['   shift, and go to state 73
    '('   shift, and go to state 74
    ')'   shift, and go to state 91


State 51

   59 e: e "++" .

    $default  reduce using rule 59 (e)


State 52

   60 e: e "--" .

    $default  reduce using rule 60 (e)


State 53

   51 e: e "<<" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 92


State 54

   52 e: e ">>" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 93


State 55

   50 e: e "==" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 94


State 56

   49 e: e "!=" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 95


State 57

   48 e: e ">=" . e

    CAST  shift, and go to state 17
    NEW   shift, and go to state 18
    NUM   shift, and go to state 19
    ID    shift, and go to state 20
    STR   shift, and go to state 21
    "++"  shift, and go to state 22
    "--"  shift, and go to state 23
    '&'   shift, and go to state 24
    '+'   shift, and go to state 25
    '-'   shift, and go to state 26
    '!'   shift, and go to state 27
    '~'   shift, and go to state 28
    '('   shift, and go to state 29

    e  go to state 96


State 58

   46 e: e "<=" . e
